--- a/blog/README.rdoc
+++ b/blog/README.rdoc
@@ -1,28 +1,3 @@
 == README
+ Wellness Tracker is a ruby on rails web application meant to manage LifeCare alliance's wellness program. For more information, refer to the developer guide & admin guide (attached separately) or user guide built into the app. 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
